pc - simple example of backend to get earthquake data

--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,11 @@
   </parent>
 
   <!-- (2) <groupId/> -->
-  <groupId>edu.ucsb.cs156.spring</groupId>
+  <groupId>edu.ucsb.cs156</groupId>
 
   <!-- (3) <artifactId/> -->
 
-  <artifactId>hello</artifactId>
+  <artifactId>demo-spring-backend</artifactId>
 
   <!-- (4) <version/> -->
   <version>1.0.0</version>
@@ -25,7 +25,7 @@
   <!-- (6) <name/> -->
   <!-- (7) <description/> -->
 
-  <description>Demonstration of Spring Boot (Hello World)</description>
+  <description>Demonstration of Spring Boot Backend</description>
 
   <!-- (8) <url/> -->
   <!-- (9) <inceptionYear/> -->
@@ -44,7 +44,7 @@
 
   <properties>
     <java.version>11</java.version>
-    <mainClass>edu.ucsb.cs156.spring.hello.Application</mainClass>
+    <mainClass>edu.ucsb.cs156.spring.backenddemo.Application</mainClass>
   </properties>
 
   <!-- (22) <dependencyManagement/> -->
@@ -66,6 +66,12 @@
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
 
   </dependencies>
 
