--- a/.github/workflows/pitest.yml
+++ b/.github/workflows/pitest.yml
@@ -1,4 +1,4 @@
-name: Java CI
+name: Pitest Mutation Tests
 
 on:
   pull_request:
@@ -6,18 +6,15 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     steps:
       - uses: actions/checkout@v1
-      - name: Set up JDK 11
+      - name: Set up JDK 17
         uses: actions/setup-java@v1
         with:
-          java-version: 11.0.x
+          java-version: 17.0.x
       - name: Build with Maven
-        run: mvn test jacoco:report
-      - name: Upload to Codecov
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-        run: bash <(curl -s https://codecov.io/bash)
+        run: mvn -B test 
       - name: Pitest
         run: mvn test org.pitest:pitest-maven:mutationCoverage
       - name: Upload Pitest to Artifacts
