--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 server.port=${PORT:8080}
-spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
+# spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
+
+springdoc.packagesToScan=edu.ucsb.cs156.spring.backenddemo.controllers
+springdoc.pathsToMatch=/api/**
