--- a/.github/workflows/team01.yml
+++ b/.github/workflows/team01.yml
@@ -9,10 +9,63 @@ on:
 jobs:
   createIssues:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        api: [ "Location", "Holiday", "Tides", "University", "Zipcode" ]
+
+    steps:
+    
+      - uses: actions/checkout@v3
+
+      - name: Add Service and Tests
+        uses: dacbd/create-issue-action@main
+        env:
+          name: ${{ matrix.api }}
+        with:
+          token: ${{ github.token }}
+          title: Add ${{env.name}} Service and Tests
+          body: |
+            # Acceptance Criteria:
+
+            - [ ] There is <tt>${{env.name}}Service.java</tt> file in the `src/main/java/edu/ucsb/cs156/spring/backend/services` directory.
+            - [ ] <tt>${{env.name}}Service.java</tt>  implements a class that make a call to the appropriate API
+                  and returns the results.
+            - [ ] There is  <tt>${{env.name}}ServiceTests.java</tt> file in the `src/test/java/edu/ucsb/cs156/spring/backend/services` directory.
+            - [ ] The tests in  <tt>${{env.name}}ServiceTests.java</tt> provide 100% coverage of  <tt>${{env.name}}Service.java</tt> for both jacoco and pitest.
+                  
+            # Details
+
+            See the assignment description at ${{env.ASN_LINK}} for details.
+
+      - name: Add Controller and Tests
+        uses: dacbd/create-issue-action@main
+        env:
+          name: ${{ matrix.api }}
+        with:
+          token: ${{ github.token }}
+          title: Add ${{env.name}} Controller and Tests
+
+          body: |
+            # Acceptance Criteria:
+
+            - [ ] There is <tt>${{env.name}}Controller.java</tt> file in the `src/main/java/edu/ucsb/cs156/spring/backend/controllers` directory.
+            - [ ] <tt>${{env.name}}Controller.java</tt> implements a class that implements an API endpoint that takes in the necessary
+                  parameters, calls the <tt>${{env.name}}Service</tt>, and returns the results.
+            - [ ] The file  <tt>${{env.name}}Controller.java</tt> file make appropriate use of the 
+                  annotations `@Tag`, `@Operation` and `@Parameter` to document the API.
+            - [ ] The controller endpoint shows up on the Swagger UI page.
+            - [ ] There is a <tt>${{env.name}}ControllerTests.java</tt> file in the `src/test/java/edu/ucsb/cs156/spring/backend/controllers` directory.
+            - [ ] The tests in <tt>${{env.name}}ControllerTests</tt> provide 100% coverage of LocationService.java for both jacoco and pitest.
+                  
+            # Details
+
+            See the assignment description at ${{env.ASN_LINK}} for details.
+      
+  createOneOffIssues:
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
-
 
       - name: Set up Team prod deployment
         uses: dacbd/create-issue-action@main
@@ -56,7 +109,7 @@ jobs:
           name: Location
         with:
           token: ${{ github.token }}
-          title: Add ${{env.name}} Service and Tests
+          title: Add ${{env.name}} Controller and Tests
 
           body: |
             # Acceptance Criteria:
@@ -89,8 +142,6 @@ jobs:
             # Details
 
             See the file /docs/dokku.md in the repo for details.
-
-
 
       - name: Adjust links in README.md
         uses: dacbd/create-issue-action@main
