--- a/.github/workflows/12-backend-jacoco.yml
+++ b/.github/workflows/12-backend-jacoco.yml
@@ -3,6 +3,9 @@
 
 name: "12-backend-jacoco: Java Test Coverage (Jacoco)"
 
+env:
+  GH_TOKEN: ${{ github.token }}
+
 on:
   workflow_dispatch:
   pull_request:
