pc - try to fix pitest step in workflow 2

--- a/.github/workflows/02-gh-pages-rebuild-part-1-backend.yml
+++ b/.github/workflows/02-gh-pages-rebuild-part-1-backend.yml
@@ -98,58 +98,39 @@ jobs:
       destination: target/pit-reports
       history_destination: target/pit-history
 
+
     steps:
-    - uses: actions/checkout@v3.5.2
-    - name: Set up Java (version from .java-version file)
-      uses: actions/setup-java@v3
-      with:
-        distribution: semeru # See: https://github.com/actions/setup-java#supported-distributions
-        java-version-file: ./.java-version
-    - name: create directories
-      run: |
-        mkdir -p ${{ env.destination }}
-        mkdir -p ${{ env.history_destination }}
-
-    - name: Download artifact
-      continue-on-error: true
-      id: download-artifact
-      uses: dawidd6/action-download-artifact@v2.27.0
-      with:
-        workflow: 02-gh-pages-rebuild-part-1.yml
-        github_token: ${{secrets.GITHUB_TOKEN}}
-        branch: ${{ env.branch_name }}
-        name: pitest-main-history.bin
-        path: ${{ env.history_destination}}
-        check_artifacts: true
-        if_no_artifact_found: warn
-
-    - name: Copy artifact to pit-history/history.bin # specified in pom.xml as historyInputFile
-      continue-on-error: true
-      run: |
-        historyFile=${{ env.history_destination}}/pitest-main-history.bin
-        if [ -f "$historyFile" ] ; then
-          cp $historyFile ${{ env.history_destination}}/history.bin
-        fi
-
-    - name: Build with Maven
-      continue-on-error: true
-      run: mvn test pitest:mutationCoverage -DmutationThreshold=100 
-
-    - name: Upload Pitest History to Artifacts
-      if: always() # always upload artifacts, even if tests fail
-      continue-on-error: true
-      uses: actions/upload-artifact@v3.1.2
-      with:
-        name: pitest-main-history.bin
-        path: ${{ env.history_destination}}/history.bin
-
-    - name: Upload to artifacts
-      continue-on-error: true
-      uses: actions/upload-artifact@v3.1.2
-      with:
-          name: pitest
-          path: ${{ env.destination }}
+      - uses: actions/checkout@v3.5.2
+      - name: Set up Java (version from .java-version file)
+        uses: actions/setup-java@v3
+        with:
+            distribution: semeru # See: https://github.com/actions/setup-java#supported-distributions
+            java-version-file: ./.java-version
+      - name: Build with Maven
+        run: mvn -B test 
+      
+      # Note that we DO NOT download history in this job;
+      # this job is intended as a "reset" of the history each time the 
+      # main branch changes
   
+      - name: Pitest
+        run: mvn test org.pitest:pitest-maven:mutationCoverage -DmutationThreshold=100 
+      - name: Upload Pitest to Artifacts
+        if: always() # always upload artifacts, even if tests fail
+        uses: actions/upload-artifact@v3.1.2
+        with:
+          name: pitest
+          path: target/pit-reports/* 
+    
+      - name: Deploy 🚀
+        if: always() # always upload artifacts, even if tests fail
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          branch: gh-pages # The branch the action should deploy to.
+          folder: target/pit-reports # The folder where the files we want to publish are located
+          clean: true # Automatically remove deleted files from the deploy branch
+          target-folder: pitest # The folder that we serve our files from
+    
   a-build-javadoc-for-each-pr:
     name: a - Javadoc (${{ matrix.value.number }}, ${{ matrix.value.headRefName }})
     runs-on: ubuntu-latest
